- fix cmakefiles for console build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,24 +10,32 @@ set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 
 # don't need openGL for console only build
-#find_package(OpenGL REQUIRED)
+if (NOT CONSOLE_BUILD)
+    find_package(OpenGL REQUIRED)
+endif(NOT CONSOLE_BUILD)
+
 find_package(Curses REQUIRED)
 find_package(Threads REQUIRED)
 
 # todo someday, perhaps
 include(CTest)
 enable_testing()
+add_executable(classic99v4)
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++14")
 
-add_executable(classic99v4)
+if (CONSOLE_BUILD)
+    # no raylib here
+    target_compile_definitions(classic99v4 PUBLIC CONSOLE_BUILD)
+    set_target_properties(classic99v4 PROPERTIES OUTPUT_NAME classic99_console)
+    TARGET_LINK_LIBRARIES(classic99v4 ${CURSES_LIBRARIES} Threads::Threads)
+else(CONSOLE_BUILD)
+    # yes raylib here
+    set_target_properties(classic99v4 PROPERTIES OUTPUT_NAME classic99)
+    TARGET_LINK_LIBRARIES(classic99v4 raylib ${CURSES_LIBRARIES} Threads::Threads)
+endif(CONSOLE_BUILD)
 
 add_subdirectory(Classic99v4)
-set_target_properties(classic99v4 PROPERTIES OUTPUT_NAME classic99)
-
-if (CONSOLE_BUILD)
-    target_compile_definitions(classic99v4 PUBLIC CONSOLE_BUILD)
-endif(CONSOLE_BUILD)   
 
 include_directories( ${CURSES_INCLUDE_DIRS} )
 
@@ -36,5 +44,3 @@ set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
 
-#TARGET_LINK_LIBRARIES(classic99v4 raylib ${CURSES_LIBRARIES} Threads::Threads)
-TARGET_LINK_LIBRARIES(classic99v4 ${CURSES_LIBRARIES} Threads::Threads)
